// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render App correctly when activities are fetched successfully 1`] = `
<App>
  <Component>
    <Menu
      fixed="top"
      inverted={true}
    >
      <div
        className="ui inverted top fixed menu"
      >
        <Container>
          <div
            className="ui container"
          >
            <MenuItem
              header={true}
            >
              <div
                className="header item"
                onClick={[Function]}
              >
                <img
                  alt="logo"
                  src="/assets/logo.png"
                  style={
                    Object {
                      "marginRight": "10px",
                    }
                  }
                />
                Social Me Die
              </div>
            </MenuItem>
            <MenuItem
              name="Activities"
            >
              <div
                className="item"
                onClick={[Function]}
              >
                Activities
              </div>
            </MenuItem>
            <MenuItem>
              <div
                className="item"
                onClick={[Function]}
              >
                <Button
                  as="button"
                  content="Create Activity"
                  positive={true}
                >
                  <Ref
                    innerRef={
                      Object {
                        "current": <button
                          class="ui positive button"
                        >
                          Create Activity
                        </button>,
                      }
                    }
                  >
                    <RefFindNode
                      innerRef={
                        Object {
                          "current": <button
                            class="ui positive button"
                          >
                            Create Activity
                          </button>,
                        }
                      }
                    >
                      <button
                        className="ui positive button"
                        onClick={[Function]}
                      >
                        Create Activity
                      </button>
                    </RefFindNode>
                  </Ref>
                </Button>
              </div>
            </MenuItem>
          </div>
        </Container>
      </div>
    </Menu>
  </Component>
  <Container
    style={
      Object {
        "marginTop": "7em",
      }
    }
  >
    <div
      className="ui container"
      style={
        Object {
          "marginTop": "7em",
        }
      }
    >
      <Component
        activities={
          Array [
            Object {
              "category": "Fake Category 1",
              "city": "Fake City",
              "date": 1970-01-01T00:00:01.000Z,
              "description": "Fake description",
              "id": "1",
              "title": "Fake Activity 1",
              "venue": "Fake Venue",
            },
            Object {
              "category": "Fake Category 2",
              "city": "Fake City 2",
              "date": 1970-01-01T00:00:01.000Z,
              "description": "Fake description 2",
              "id": "2",
              "title": "Fake Activity 2",
              "venue": "Fake Venue 2",
            },
          ]
        }
        selectActivity={[Function]}
        selectedActivity={null}
      >
        <Grid>
          <div
            className="ui grid"
          >
            <GridColumn
              width={10}
            >
              <div
                className="ten wide column"
              >
                <Component
                  activities={
                    Array [
                      Object {
                        "category": "Fake Category 1",
                        "city": "Fake City",
                        "date": 1970-01-01T00:00:01.000Z,
                        "description": "Fake description",
                        "id": "1",
                        "title": "Fake Activity 1",
                        "venue": "Fake Venue",
                      },
                      Object {
                        "category": "Fake Category 2",
                        "city": "Fake City 2",
                        "date": 1970-01-01T00:00:01.000Z,
                        "description": "Fake description 2",
                        "id": "2",
                        "title": "Fake Activity 2",
                        "venue": "Fake Venue 2",
                      },
                    ]
                  }
                  selectActivity={[Function]}
                >
                  <Segment
                    clearing={true}
                  >
                    <div
                      className="ui clearing segment"
                    >
                      <ItemGroup
                        divided={true}
                      >
                        <div
                          className="ui divided items"
                        >
                          <Item
                            key="1"
                          >
                            <div
                              className="item"
                            >
                              <ItemContent>
                                <div
                                  className="content"
                                >
                                  <ItemHeader
                                    as="a"
                                  >
                                    <a
                                      className="header"
                                    >
                                      Fake Activity 1
                                    </a>
                                  </ItemHeader>
                                  <ItemMeta>
                                    <div
                                      className="meta"
                                    >
                                      12/31/1969, 7:00:01 PM
                                    </div>
                                  </ItemMeta>
                                  <ItemDescription>
                                    <div
                                      className="description"
                                    >
                                      <div>
                                        Fake description
                                      </div>
                                      <div>
                                        Fake City
                                        , 
                                        Fake Venue
                                      </div>
                                    </div>
                                  </ItemDescription>
                                  <ItemExtra>
                                    <div
                                      className="extra"
                                    >
                                      <Button
                                        as="button"
                                        color="blue"
                                        content="View"
                                        floated="right"
                                        onClick={[Function]}
                                      >
                                        <Ref
                                          innerRef={
                                            Object {
                                              "current": <button
                                                class="ui blue right floated button"
                                              >
                                                View
                                              </button>,
                                            }
                                          }
                                        >
                                          <RefFindNode
                                            innerRef={
                                              Object {
                                                "current": <button
                                                  class="ui blue right floated button"
                                                >
                                                  View
                                                </button>,
                                              }
                                            }
                                          >
                                            <button
                                              className="ui blue right floated button"
                                              onClick={[Function]}
                                            >
                                              View
                                            </button>
                                          </RefFindNode>
                                        </Ref>
                                      </Button>
                                      <Label
                                        basic={true}
                                        content="Fake Category 1"
                                      >
                                        <div
                                          className="ui basic label"
                                          onClick={[Function]}
                                        >
                                          Fake Category 1
                                        </div>
                                      </Label>
                                    </div>
                                  </ItemExtra>
                                </div>
                              </ItemContent>
                            </div>
                          </Item>
                          <Item
                            key="2"
                          >
                            <div
                              className="item"
                            >
                              <ItemContent>
                                <div
                                  className="content"
                                >
                                  <ItemHeader
                                    as="a"
                                  >
                                    <a
                                      className="header"
                                    >
                                      Fake Activity 2
                                    </a>
                                  </ItemHeader>
                                  <ItemMeta>
                                    <div
                                      className="meta"
                                    >
                                      12/31/1969, 7:00:01 PM
                                    </div>
                                  </ItemMeta>
                                  <ItemDescription>
                                    <div
                                      className="description"
                                    >
                                      <div>
                                        Fake description 2
                                      </div>
                                      <div>
                                        Fake City 2
                                        , 
                                        Fake Venue 2
                                      </div>
                                    </div>
                                  </ItemDescription>
                                  <ItemExtra>
                                    <div
                                      className="extra"
                                    >
                                      <Button
                                        as="button"
                                        color="blue"
                                        content="View"
                                        floated="right"
                                        onClick={[Function]}
                                      >
                                        <Ref
                                          innerRef={
                                            Object {
                                              "current": <button
                                                class="ui blue right floated button"
                                              >
                                                View
                                              </button>,
                                            }
                                          }
                                        >
                                          <RefFindNode
                                            innerRef={
                                              Object {
                                                "current": <button
                                                  class="ui blue right floated button"
                                                >
                                                  View
                                                </button>,
                                              }
                                            }
                                          >
                                            <button
                                              className="ui blue right floated button"
                                              onClick={[Function]}
                                            >
                                              View
                                            </button>
                                          </RefFindNode>
                                        </Ref>
                                      </Button>
                                      <Label
                                        basic={true}
                                        content="Fake Category 2"
                                      >
                                        <div
                                          className="ui basic label"
                                          onClick={[Function]}
                                        >
                                          Fake Category 2
                                        </div>
                                      </Label>
                                    </div>
                                  </ItemExtra>
                                </div>
                              </ItemContent>
                            </div>
                          </Item>
                        </div>
                      </ItemGroup>
                    </div>
                  </Segment>
                </Component>
              </div>
            </GridColumn>
            <GridColumn
              width={6}
            >
              <div
                className="six wide column"
              >
                <Component>
                  <Segment>
                    <div
                      className="ui segment"
                    >
                      <Form
                        as="form"
                      >
                        <form
                          className="ui form"
                          onSubmit={[Function]}
                        >
                          <FormInput
                            as={[Function]}
                            control={[Function]}
                            placeholder="Title"
                          >
                            <FormField
                              control={[Function]}
                              placeholder="Title"
                            >
                              <div
                                className="field"
                              >
                                <Input
                                  aria-describedby={null}
                                  placeholder="Title"
                                  type="text"
                                >
                                  <div
                                    className="ui input"
                                  >
                                    <input
                                      aria-describedby={null}
                                      onChange={[Function]}
                                      placeholder="Title"
                                      type="text"
                                    />
                                  </div>
                                </Input>
                              </div>
                            </FormField>
                          </FormInput>
                          <FormTextArea
                            as={[Function]}
                            control={[Function]}
                            placeholder="Description"
                            rows={2}
                          >
                            <FormField
                              control={[Function]}
                              placeholder="Description"
                              rows={2}
                            >
                              <div
                                className="field"
                              >
                                <TextArea
                                  aria-describedby={null}
                                  as="textarea"
                                  placeholder="Description"
                                  rows={2}
                                >
                                  <Ref
                                    innerRef={
                                      Object {
                                        "current": <textarea
                                          placeholder="Description"
                                          rows="2"
                                        />,
                                      }
                                    }
                                  >
                                    <RefFindNode
                                      innerRef={
                                        Object {
                                          "current": <textarea
                                            placeholder="Description"
                                            rows="2"
                                          />,
                                        }
                                      }
                                    >
                                      <textarea
                                        aria-describedby={null}
                                        onChange={[Function]}
                                        onInput={[Function]}
                                        placeholder="Description"
                                        rows={2}
                                      />
                                    </RefFindNode>
                                  </Ref>
                                </TextArea>
                              </div>
                            </FormField>
                          </FormTextArea>
                          <FormInput
                            as={[Function]}
                            control={[Function]}
                            placeholder="Category"
                          >
                            <FormField
                              control={[Function]}
                              placeholder="Category"
                            >
                              <div
                                className="field"
                              >
                                <Input
                                  aria-describedby={null}
                                  placeholder="Category"
                                  type="text"
                                >
                                  <div
                                    className="ui input"
                                  >
                                    <input
                                      aria-describedby={null}
                                      onChange={[Function]}
                                      placeholder="Category"
                                      type="text"
                                    />
                                  </div>
                                </Input>
                              </div>
                            </FormField>
                          </FormInput>
                          <FormInput
                            as={[Function]}
                            control={[Function]}
                            placeholder="Date"
                            type="date"
                          >
                            <FormField
                              control={[Function]}
                              placeholder="Date"
                              type="date"
                            >
                              <div
                                className="field"
                              >
                                <Input
                                  aria-describedby={null}
                                  placeholder="Date"
                                  type="date"
                                >
                                  <div
                                    className="ui input"
                                  >
                                    <input
                                      aria-describedby={null}
                                      onChange={[Function]}
                                      placeholder="Date"
                                      type="date"
                                    />
                                  </div>
                                </Input>
                              </div>
                            </FormField>
                          </FormInput>
                          <FormInput
                            as={[Function]}
                            control={[Function]}
                            placeholder="City"
                          >
                            <FormField
                              control={[Function]}
                              placeholder="City"
                            >
                              <div
                                className="field"
                              >
                                <Input
                                  aria-describedby={null}
                                  placeholder="City"
                                  type="text"
                                >
                                  <div
                                    className="ui input"
                                  >
                                    <input
                                      aria-describedby={null}
                                      onChange={[Function]}
                                      placeholder="City"
                                      type="text"
                                    />
                                  </div>
                                </Input>
                              </div>
                            </FormField>
                          </FormInput>
                          <FormInput
                            as={[Function]}
                            control={[Function]}
                            placeholder="Venue"
                          >
                            <FormField
                              control={[Function]}
                              placeholder="Venue"
                            >
                              <div
                                className="field"
                              >
                                <Input
                                  aria-describedby={null}
                                  placeholder="Venue"
                                  type="text"
                                >
                                  <div
                                    className="ui input"
                                  >
                                    <input
                                      aria-describedby={null}
                                      onChange={[Function]}
                                      placeholder="Venue"
                                      type="text"
                                    />
                                  </div>
                                </Input>
                              </div>
                            </FormField>
                          </FormInput>
                        </form>
                      </Form>
                    </div>
                  </Segment>
                </Component>
              </div>
            </GridColumn>
          </div>
        </Grid>
      </Component>
    </div>
  </Container>
</App>
`;

exports[`Should render App correctly with empty activity list 1`] = `
<App>
  <Component>
    <Menu
      fixed="top"
      inverted={true}
    >
      <div
        className="ui inverted top fixed menu"
      >
        <Container>
          <div
            className="ui container"
          >
            <MenuItem
              header={true}
            >
              <div
                className="header item"
                onClick={[Function]}
              >
                <img
                  alt="logo"
                  src="/assets/logo.png"
                  style={
                    Object {
                      "marginRight": "10px",
                    }
                  }
                />
                Social Me Die
              </div>
            </MenuItem>
            <MenuItem
              name="Activities"
            >
              <div
                className="item"
                onClick={[Function]}
              >
                Activities
              </div>
            </MenuItem>
            <MenuItem>
              <div
                className="item"
                onClick={[Function]}
              >
                <Button
                  as="button"
                  content="Create Activity"
                  positive={true}
                >
                  <Ref
                    innerRef={
                      Object {
                        "current": <button
                          class="ui positive button"
                        >
                          Create Activity
                        </button>,
                      }
                    }
                  >
                    <RefFindNode
                      innerRef={
                        Object {
                          "current": <button
                            class="ui positive button"
                          >
                            Create Activity
                          </button>,
                        }
                      }
                    >
                      <button
                        className="ui positive button"
                        onClick={[Function]}
                      >
                        Create Activity
                      </button>
                    </RefFindNode>
                  </Ref>
                </Button>
              </div>
            </MenuItem>
          </div>
        </Container>
      </div>
    </Menu>
  </Component>
  <Container
    style={
      Object {
        "marginTop": "7em",
      }
    }
  >
    <div
      className="ui container"
      style={
        Object {
          "marginTop": "7em",
        }
      }
    >
      <Component
        activities={Array []}
        selectActivity={[Function]}
        selectedActivity={null}
      >
        <Grid>
          <div
            className="ui grid"
          >
            <GridColumn
              width={10}
            >
              <div
                className="ten wide column"
              >
                <Component
                  activities={Array []}
                  selectActivity={[Function]}
                >
                  <Segment
                    clearing={true}
                  >
                    <div
                      className="ui clearing segment"
                    >
                      <ItemGroup
                        divided={true}
                      >
                        <div
                          className="ui divided items"
                        />
                      </ItemGroup>
                    </div>
                  </Segment>
                </Component>
              </div>
            </GridColumn>
            <GridColumn
              width={6}
            >
              <div
                className="six wide column"
              >
                <Component>
                  <Segment>
                    <div
                      className="ui segment"
                    >
                      <Form
                        as="form"
                      >
                        <form
                          className="ui form"
                          onSubmit={[Function]}
                        >
                          <FormInput
                            as={[Function]}
                            control={[Function]}
                            placeholder="Title"
                          >
                            <FormField
                              control={[Function]}
                              placeholder="Title"
                            >
                              <div
                                className="field"
                              >
                                <Input
                                  aria-describedby={null}
                                  placeholder="Title"
                                  type="text"
                                >
                                  <div
                                    className="ui input"
                                  >
                                    <input
                                      aria-describedby={null}
                                      onChange={[Function]}
                                      placeholder="Title"
                                      type="text"
                                    />
                                  </div>
                                </Input>
                              </div>
                            </FormField>
                          </FormInput>
                          <FormTextArea
                            as={[Function]}
                            control={[Function]}
                            placeholder="Description"
                            rows={2}
                          >
                            <FormField
                              control={[Function]}
                              placeholder="Description"
                              rows={2}
                            >
                              <div
                                className="field"
                              >
                                <TextArea
                                  aria-describedby={null}
                                  as="textarea"
                                  placeholder="Description"
                                  rows={2}
                                >
                                  <Ref
                                    innerRef={
                                      Object {
                                        "current": <textarea
                                          placeholder="Description"
                                          rows="2"
                                        />,
                                      }
                                    }
                                  >
                                    <RefFindNode
                                      innerRef={
                                        Object {
                                          "current": <textarea
                                            placeholder="Description"
                                            rows="2"
                                          />,
                                        }
                                      }
                                    >
                                      <textarea
                                        aria-describedby={null}
                                        onChange={[Function]}
                                        onInput={[Function]}
                                        placeholder="Description"
                                        rows={2}
                                      />
                                    </RefFindNode>
                                  </Ref>
                                </TextArea>
                              </div>
                            </FormField>
                          </FormTextArea>
                          <FormInput
                            as={[Function]}
                            control={[Function]}
                            placeholder="Category"
                          >
                            <FormField
                              control={[Function]}
                              placeholder="Category"
                            >
                              <div
                                className="field"
                              >
                                <Input
                                  aria-describedby={null}
                                  placeholder="Category"
                                  type="text"
                                >
                                  <div
                                    className="ui input"
                                  >
                                    <input
                                      aria-describedby={null}
                                      onChange={[Function]}
                                      placeholder="Category"
                                      type="text"
                                    />
                                  </div>
                                </Input>
                              </div>
                            </FormField>
                          </FormInput>
                          <FormInput
                            as={[Function]}
                            control={[Function]}
                            placeholder="Date"
                            type="date"
                          >
                            <FormField
                              control={[Function]}
                              placeholder="Date"
                              type="date"
                            >
                              <div
                                className="field"
                              >
                                <Input
                                  aria-describedby={null}
                                  placeholder="Date"
                                  type="date"
                                >
                                  <div
                                    className="ui input"
                                  >
                                    <input
                                      aria-describedby={null}
                                      onChange={[Function]}
                                      placeholder="Date"
                                      type="date"
                                    />
                                  </div>
                                </Input>
                              </div>
                            </FormField>
                          </FormInput>
                          <FormInput
                            as={[Function]}
                            control={[Function]}
                            placeholder="City"
                          >
                            <FormField
                              control={[Function]}
                              placeholder="City"
                            >
                              <div
                                className="field"
                              >
                                <Input
                                  aria-describedby={null}
                                  placeholder="City"
                                  type="text"
                                >
                                  <div
                                    className="ui input"
                                  >
                                    <input
                                      aria-describedby={null}
                                      onChange={[Function]}
                                      placeholder="City"
                                      type="text"
                                    />
                                  </div>
                                </Input>
                              </div>
                            </FormField>
                          </FormInput>
                          <FormInput
                            as={[Function]}
                            control={[Function]}
                            placeholder="Venue"
                          >
                            <FormField
                              control={[Function]}
                              placeholder="Venue"
                            >
                              <div
                                className="field"
                              >
                                <Input
                                  aria-describedby={null}
                                  placeholder="Venue"
                                  type="text"
                                >
                                  <div
                                    className="ui input"
                                  >
                                    <input
                                      aria-describedby={null}
                                      onChange={[Function]}
                                      placeholder="Venue"
                                      type="text"
                                    />
                                  </div>
                                </Input>
                              </div>
                            </FormField>
                          </FormInput>
                        </form>
                      </Form>
                    </div>
                  </Segment>
                </Component>
              </div>
            </GridColumn>
          </div>
        </Grid>
      </Component>
    </div>
  </Container>
</App>
`;
